@@ -16,7 +16,7 @@
  limitations under the License.
 -->
 <schema name="example" version="1.6">
-  <field name="_version_" type="long" indexed="true" stored="true"/>
+  <field name="_version_" type="${solr.tests.longClass:plong}" indexed="true" docValues="false" stored="true" />
   <field name="id" type="string" indexed="true" stored="true" required="true" multiValued="false"/>
   <field name="text" type="text_general" indexed="true" stored="false" multiValued="true"/>
   <field name="signatureField" type="string" indexed="true" stored="false"/>
@@ -24,6 +24,7 @@
   <uniqueKey>id</uniqueKey>
   <fieldType name="string" class="solr.StrField" sortMissingLast="true"/>
   <fieldType name="long" class="solr.TrieLongField" precisionStep="0" positionIncrementGap="0"/>
+  <fieldType name="plong" class="solr.LongPointField" positionIncrementGap="0"/>
   <fieldType name="text_general" class="solr.TextField" positionIncrementGap="100">
     <analyzer>
       <tokenizer class="solr.StandardTokenizerFactory"/>
