@@ -131,6 +131,8 @@ Bug Fixes
               Trie numeric fields should throw SolrException(BAD_REQUEST) for malformed docValues range queries.
   (hossman, Tomás Fernández Löbbe)
 
+* SOLR-10832: Fixed VersionInfo.getMaxVersionFromIndex when using PointsField with indexed="true" (hossman)
+
 Optimizations
 ----------------------
 * SOLR-10634: JSON Facet API: When a field/terms facet will retrieve all buckets (i.e. limit:-1)
